--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ p{
 }
 .client-items{
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     display: flex;
     margin: 2px 692spx;
     width: 100px;
