--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -657,7 +657,7 @@ footer span a:hover{
         padding: 25px;
         font-size: x-large;
         z-index: 999;
-        color: black;
+        color: white;
     }
     .menu-btn i.active::before{
         content: "\f00d";
@@ -793,6 +793,7 @@ footer span a:hover{
     .left-container h4{
         display: flex;
         align-items: center;
+        color: white;
     }
     .Home{
         padding: 100px 20px;
