--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -693,6 +693,12 @@ footer span a:hover{
         padding: 0%;
         font-family: 'Sriracha', cursive;
     }
+    .interests h2{
+        padding-top: 8%;
+    }
+    .navbar.sticky{
+        height: 87px;
+    }
 }
 @media (max-width: 520px){
     html{
@@ -809,5 +815,11 @@ footer span a:hover{
     }
     .left-container3a,.left-container3b{
         margin: 4%;
+    }
+    .menu-btn{
+        padding:3%;
+    }
+    .navbar.sticky{
+        height: 49px;
     }
 }
